--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,69 +6,66 @@
   justify-content: center;
   align-items: center;
 }
-
+.halloween {
+  font-family: "Ruge Boogie", cursive;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
 .main {
   padding: 5rem 0;
   flex: 1;
+  width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer {
+@media (max-width: 400px) {
+  .main {
+    width: 90%;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 768px) {
+  .main {
+    width: 400px;
+    flex-direction: column;
+  }
+}
+
+.block {
+  background-color: rgb(255 138 28 / 86%);
+  border: 5px solid #ffffffc7;
+  box-shadow: 0px 0 0 2px #000000;
+  border-radius: 15px;
+  padding: 2rem;
+  margin-bottom: 1rem;
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
   margin: 0;
+  margin-bottom: 2rem;
   line-height: 1.15;
   font-size: 4rem;
+  font-family: "Ruge Boogie", cursive;
 }
 
-.title,
-.description {
-  text-align: center;
+.check {
+  margin: 1rem;
+  line-height: 2rem;
 }
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.check input[type="radio"] {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  height: 1rem;
+  border: 0px;
+  width: 1rem;
+  vertical-align: text-bottom;
+  margin-right: 0.5rem;
 }
 
 .grid {
@@ -80,43 +77,25 @@
   margin-top: 3rem;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+.signup label {
+  display: block;
+}
+.signup input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.button {
+  margin-top: 2rem;
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  background-color: peru;
+  font-size: large;
 }
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.error {
+  font-weight: bold;
+  font-size: larger;
+  background-color: #df2100;
+  color: white;
+  padding: 2rem;
 }
