--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Ruge+Boogie&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+    font-size: 20px;
 }
-
+body {
+  background-image: url(/background.png);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 a {
   color: inherit;
   text-decoration: none;
